Fix landing z-index for safari

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -22,7 +22,12 @@
         left: 0;
         top: 0;
         background-color: rgba(16, 19, 50, 0.88);
-        z-index: -1;
+        z-index: 0;
+    }
+
+    &__text {
+        position: relative;
+        z-index: 1;
     }
 
     h1,
